# re-trace

./: .gitignore  LICENSE  README.md  pyproject.toml
src/re_trace/ctrlg/ctrlg/: __init__.py  dfa.py  hmm.py  sohmm.py  utils.py
src/re_trace/ctrlg/distillation/: chmm.py  chmm_logits_processor.py  lvd_hmm.py  lvd_sohmm.py  sample_data.py  setup_distill_env.sh  train_chmm.py  train_hmm.py  train_sohmm.py  tutorial_distillation_chmm_quadratic_log.ipynb  tutorial_distillation_chmm_uniform6.ipynb  tutorial_distillation_chmm_uniform8.ipynb
src/re_trace/trace/: convert_ctrlg_to_trace_hmm.py  convert_ctrlg_to_trace_sohmm.py  test_data_gen.py
src/re_trace/trace/src/: fit.py  generate.py  generate_sohmm.py  hmm.py  logits_processor.py  logits_processor_sohmm.py  score.py  score_attribute.py  sohmm.py  utils.py
