[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "re-trace"
version = "0.1.0"
description = "A research project for training and inference"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "pyyaml",
    "tqdm",
    "pytest",
    "black",
    "isort",
    "flake8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
